--- a/assets/css/front-end-compiled.css
+++ b/assets/css/front-end-compiled.css
@@ -5649,6 +5649,8 @@ a.mdc-list-item {
 	--admin-bar-offset: 3.5rem;
 }
 .content-area {
+	padding-left: 1rem;
+	padding-right: 1rem;
 	margin-left: auto;
 	margin-right: auto;
 	max-width: 50rem ;
@@ -5732,9 +5734,13 @@ a.mdc-list-item {
 .error404 .page-content {
 		margin-left: auto;
 		margin-right: auto;
-		max-width: 60%;
 		text-align: center;
 	}
+@media (min-width: 48em) {
+.error404 .page-content {
+			max-width: 60%
+	}
+		}
 .error404 .error-404 {
 		max-width: var( --max )
 	}
