--- a/assets/css/src/templates/error404.css
+++ b/assets/css/src/templates/error404.css
@@ -13,8 +13,11 @@
 	& .page-content {
 		margin-left: auto;
 		margin-right: auto;
-		max-width: 60%;
 		text-align: center;
+
+		@media (--medium-viewport) {
+			max-width: 60%;
+		}
 	}
 
 	& .error-404 {
